messages fix, svg overflow, and mithril update

--- a/index.css
+++ b/index.css
@@ -12,6 +12,9 @@
     local('SignWriting_2010_Filling'),
     url('https://cdn.rawgit.com/Slevinski/signwriting_2010_fonts/master/fonts/SignWriting%202010%20Filling.ttf') format('truetype');
 }
+svg {
+  overflow: visible;
+}
 
 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
@@ -27,6 +30,7 @@ html,body {
   margin: 0;
   -webkit-overflow-scrolling: touch;
 }
+
 div.clickable:hover{
   background: #c7c7c7;
 }
